--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <script src="index.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    RPS Page
+    <div class="header">
+        <div>Rock, Paper, Scissors!</div>
+    </div>
+    <div class="content">
+        <div class="left">
+            <button id="Rock">Rock</button>
+            <button id="Paper">Paper</button>
+            <button id="Scissors">Scissors</button>
+            <button id="Restart">Restart</button>
+        </div>
+        <div class="right">
+            <p id="status"></p>
+        </div>
+    </div>    
 </body>
 </html>
