--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     </div>
     <div class="content">
         <div class="left">
-            <button id="Rock">Rock</button>
-            <button id="Paper">Paper</button>
-            <button id="Scissors">Scissors</button>
-            <button id="Restart">Restart</button>
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
         </div>
         <div class="right">
-            <p id="status"></p>
+            <p id="status">Thing loaded.</p>
+            <button id="restart">Restart</button>
         </div>
     </div>    
 </body>
