--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button id="scissors">Scissors</button>
         </div>
         <div class="right">
-            <p id="status">Thing loaded.</p>
+            <div id="status">Thing loaded.</div>
             <button id="restart">Restart</button>
         </div>
     </div>    
