Align status text to bottom, overflow on top
I'm going to call this one complete.
There's a dozen little improvements that could be done,
but right now I want to push on to new content.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
             <button id="scissors">Scissors</button>
         </div>
         <div class="right">
-            <div id="status">Thing loaded.</div>
+            <div id="status-box">
+                <div id="status">Thing loaded.</div>
+            </div>
             <button id="restart">Restart</button>
         </div>
-    </div>    
+    </div>
 </body>
 </html>
